src/test/deca/context/invalid/method-returnVoid.deca
class A{
	void meth() {
		return 5;
	}
}
